# pymenu

./: LICENSE  README.md  pyproject.toml
pymenu/: __init__.py  exceptions.py
tests/: exampleMenu.py  menuHandler.py  testMenu.py  testPositionalArgMenu.py  testSimpleMenu.py
