[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymenu_mkerle"
version = "0.0.3"
authors = [
  { name="Mitch Kerle", email="mitch.kerle@gmail.com" },
]
description = "Menu system for python scripts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mkerle/pymenu"
"Bug Tracker" = "https://github.com/mkerle/pymenu/issues"